--- a/archivos-conf-script/docker-compose.yml
+++ b/archivos-conf-script/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "8080:8080"  
     volumes:
-      - ../hello-world.war:/usr/local/tomcat/webapps/app1.war  # Monta tu WAR en la carpeta de despliegue
-      - ../sample.war:/usr/local/tomcat/webapps/app2.war  # Monta tu WAR en la carpeta de despliegue
+      - ./hello-world.war:/usr/local/tomcat/webapps/app1.war  # Monta tu WAR en la carpeta de despliegue
+      - ./sample.war:/usr/local/tomcat/webapps/app2.war  # Monta tu WAR en la carpeta de despliegue
     restart: always
 
   apache:
