--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,11 +71,11 @@ jobs:
 
       - name: Subir docker-compose y archivos necesarios
         run: |
-          scp -o StrictHostKeyChecking=no archivos-conf-script ec2-user@${{ needs.despliegue.outputs.instance_public_ip }}:/home/ec2-user/archivos-conf-script  
+          scp -i deploy_key.pem -o StrictHostKeyChecking=no archivos-conf-script ec2-user@${{ needs.despliegue.outputs.instance_public_ip }}:/home/ec2-user/archivos-conf-script
 
       - name: Ejecutar Docker Compose
         run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
+          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
 
       - name: Borrar archivo private key
         run: |
