--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Ejecutar Docker Compose
         run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
+          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "/usr/local/bin/docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
 
       - name: Borrar archivo private key
         run: |
