--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,9 +73,15 @@ jobs:
         run: |
           scp -i deploy_key.pem -r -o StrictHostKeyChecking=no archivos-conf-script ec2-user@${{ needs.despliegue.outputs.instance_public_ip }}:/home/ec2-user/archivos-conf-script
 
+      #- name: Ejecutar Docker Compose
+      #  run: |
+      #    ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "/usr/local/bin/docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
+
       - name: Ejecutar Docker Compose
         run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "/usr/local/bin/docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
+          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "
+          source ~/.bash_profile && /usr/local/bin/docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
+
 
       - name: Borrar archivo private key
         run: |
