--- a/archivos-conf-script/apache.conf
+++ b/archivos-conf-script/apache.conf
@@ -5,6 +5,8 @@ Listen 443
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule ssl_module modules/mod_ssl.so
+LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+LoadModule alias_module modules/mod_alias.so
 
 # Configuración para  bego.work.gd
 <VirtualHost *:80>
