--- a/archivos-conf-script/docker-compose.yml
+++ b/archivos-conf-script/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: always
 
   apache:
-    image: httpd:2.4
+    image: httpd:2.4-bullseye
     container_name: apache
     depends_on:
       - tomcat  
