--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,8 +80,7 @@ jobs:
       - name: Ejecutar Docker Compose
         run: |
           ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} "
-          source ~/.bash_profile && /usr/local/bin/docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
-
+          source ~/.bash_profile && docker compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d"
 
       - name: Borrar archivo private key
         run: |
