--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,15 +79,9 @@ jobs:
 
       - name: Ejecutar Docker Compose en remoto
         run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} <<'EOF'
-            set -e
-            echo "==> PATH actual: $PATH"
-            echo "==> Dónde está Docker:"
-            command -v docker || echo "Docker no está en el PATH"
-
-            echo "==> Ejecutando docker compose"
+          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} 'bash -l -c "
             docker-compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d
-          EOF
+          "'
 
       - name: Borrar archivo private key
         run: |
