--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,11 @@ jobs:
           echo "${{ secrets.DEPLOYER_KEY }}" > deploy_key.pem
           chmod 600 deploy_key.pem
 
+      - name: Esperar a que la instancia esté lista
+        run: |
+          aws ec2 wait instance-status-ok \
+            --instance-ids ${{ steps.terraform.outputs.instance_id }}    
+
       - name: Subir carpeta con docker-compose y archivos necesarios
         run: |
           scp -i deploy_key.pem -r -o StrictHostKeyChecking=no archivos-conf-script ec2-user@${{ needs.despliegue.outputs.instance_public_ip }}:/home/ec2-user/archivos-conf-script
@@ -76,12 +81,11 @@ jobs:
       - name: Subir carpeta con certificados
         run: |
           scp -i deploy_key.pem -r -o StrictHostKeyChecking=no certificado ec2-user@${{ needs.despliegue.outputs.instance_public_ip }}:/home/ec2-user/certificado
-
+      
       - name: Ejecutar Docker Compose
         run: |
-          ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} 'bash -l -c "
-            sudo docker compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d
-          "'
+          ssh -o StrictHostKeyChecking=no -i deploy_key.pem ec2-user@${{ steps.terraform.outputs.instance_public_ip }} \
+          "docker compose -f ~/archivos-conf-script/docker-compose.yml up -d"
 
       - name: Borrar archivo private key
         run: |
