--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
       
       - name: Ejecutar Docker Compose
         run: |
-          ssh -o StrictHostKeyChecking=no -i deploy_key.pem ec2-user@${{ steps.terraform.outputs.instance_public_ip }} \
+          ssh -o StrictHostKeyChecking=no -i deploy_key.pem ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} \
           "docker compose -f ~/archivos-conf-script/docker-compose.yml up -d"
 
       - name: Borrar archivo private key
