--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,8 +80,8 @@ jobs:
       - name: Ejecutar Docker Compose
         run: |
           ssh -i deploy_key.pem -o StrictHostKeyChecking=no ec2-user@${{ needs.despliegue.outputs.instance_public_ip }} \
-            "sudo docker compose -f ~/archivos-conf-script/docker-compose.yml up -d"
-
+            'export PATH=$PATH:/usr/local/bin:/usr/local/lib/docker/cli-plugins && \
+             sudo docker compose -f /home/ec2-user/archivos-conf-script/docker-compose.yml up -d'
 
       - name: Borrar archivo private key
         run: |
