cambiar la forma de lanzar el docker compose

--- a/archivos-conf-script/default-ssl.conf
+++ b/archivos-conf-script/default-ssl.conf
@@ -4,9 +4,9 @@
 
     SSLEngine on
     # Por si diese fallo con la cadena junta de certificados, descomentar esto y eliminar la linea 12 y hacer lo mismo en el otro virtual host
-    #SSLCertificateFile "/usr/local/apache2/conf/cert/certificate.crt"
-    #SSLCertificateChainFile "/usr/local/apache2/conf/cert/ca_bundle.crt"
-    SSLCertificateFile "/usr/local/apache2/conf/cert/fullchain.crt"
+    SSLCertificateFile "/usr/local/apache2/conf/cert/certificate.crt"
+    SSLCertificateChainFile "/usr/local/apache2/conf/cert/ca_bundle.crt"
+    #SSLCertificateFile "/usr/local/apache2/conf/cert/fullchain.crt"
     SSLCertificateKeyFile "/usr/local/apache2/conf/cert/private.key"
 
     ProxyPreserveHost On
@@ -19,7 +19,9 @@
     ServerName bego1.work.gd
 
     SSLEngine on
-    SSLCertificateFile "/usr/local/apache2/conf/cert/fullchain.crt"
+    SSLCertificateFile "/usr/local/apache2/conf/cert/certificate.crt"
+    SSLCertificateChainFile "/usr/local/apache2/conf/cert/ca_bundle.crt"
+    #SSLCertificateFile "/usr/local/apache2/conf/cert/fullchain.crt"
     SSLCertificateKeyFile "/usr/local/apache2/conf/cert/private.key"
 
     ProxyPreserveHost On
