cambiar archivos de configuracion

--- a/archivos-conf-script/default-ssl.conf
+++ b/archivos-conf-script/default-ssl.conf
@@ -3,11 +3,9 @@
     ServerName bego.work.gd
 
     SSLEngine on
-    # Por si diese fallo con la cadena junta de certificados, descomentar esto y eliminar la linea 12 y hacer lo mismo en el otro virtual host
-    SSLCertificateFile "/usr/local/apache2/conf/cert/certificate.crt"
-    SSLCertificateChainFile "/usr/local/apache2/conf/cert/ca_bundle.crt"
-    #SSLCertificateFile "/usr/local/apache2/conf/cert/fullchain.crt"
-    SSLCertificateKeyFile "/usr/local/apache2/conf/cert/private.key"
+    SSLCertificateFile /usr/local/apache2/conf/cert/certificate.crt
+    SSLCertificateKeyFile /usr/local/apache2/conf/cert/private.key
+    SSLCertificateChainFile /usr/local/apache2/conf/cert/ca_bundle.crt
 
     ProxyPreserveHost On
     ProxyPass / http://tomcat:8080/app1/
@@ -19,10 +17,9 @@
     ServerName bego1.work.gd
 
     SSLEngine on
-    SSLCertificateFile "/usr/local/apache2/conf/cert/certificate.crt"
-    SSLCertificateChainFile "/usr/local/apache2/conf/cert/ca_bundle.crt"
-    #SSLCertificateFile "/usr/local/apache2/conf/cert/fullchain.crt"
-    SSLCertificateKeyFile "/usr/local/apache2/conf/cert/private.key"
+    SSLCertificateFile /usr/local/apache2/conf/cert/certificate.crt
+    SSLCertificateKeyFile /usr/local/apache2/conf/cert/private.key
+    SSLCertificateChainFile /usr/local/apache2/conf/cert/ca_bundle.crt
 
     ProxyPreserveHost On
     ProxyPass / http://tomcat:8080/app2/
