--- a/archivos-conf-script/docker-compose.yml
+++ b/archivos-conf-script/docker-compose.yml
@@ -1,24 +1,28 @@
-services:
-  tomcat:
-    image: tomcat:9.0 
-    container_name: tomcat_app
-    ports:
-      - "8080:8080"  
-    volumes:
-      - ./hello-world.war:/usr/local/tomcat/webapps/app1.war  # Monta tu WAR en la carpeta de despliegue
-      - ./sample.war:/usr/local/tomcat/webapps/app2.war  # Monta tu WAR en la carpeta de despliegue
-    restart: always
+version: '3.8'
 
+services:
   apache:
-    image: httpd:2.4-bullseye
-    container_name: apache
-    depends_on:
-      - tomcat  
+    image: httpd:2.4
+    container_name: apache-web
     ports:
-      - "80:80"  
-      - "443:443"
+      - "80:80"
     volumes:
-      - ./apache.conf:/usr/local/apache2/conf/httpd.conf:ro  
-      - ./default-ssl.conf:/usr/local/apache2/conf/extra/httpd-ssl.conf:ro
-      - ../certificado:/usr/local/apache2/conf/cert:ro
-    restart: always
+      - ./httpd.conf:/usr/local/apache2/conf/httpd.conf
+    networks:
+      - app-network
+    depends_on:
+      - tomcat
+
+  tomcat:
+    image: tomcat:9.0
+    container_name: tomcat-server
+    expose:
+      - "8080"
+    volumes:
+      - ./webapps/:/usr/local/tomcat/webapps/
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
