--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -1,5 +1,6 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule mpm_event_module modules/mod_mpm_event.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
