--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -1,10 +1,13 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule mpm_event_module modules/mod_mpm_event.so
+LoadModule log_config_module modules/mod_log_config.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
 Listen 80
+
+ServerName localhost
 
 <VirtualHost *:80>
     ServerName bego.work.gd
