Modificar httpd dockerfile y añadir app

--- a/archivos-conf-script/Dockerfile
+++ b/archivos-conf-script/Dockerfile
@@ -1,22 +1,9 @@
-FROM alpine:latest
+FROM httpd:2.4
 
-# Instalación de Apache y módulos necesarios
-RUN apk update && \
-    apk add --no-cache apache2 apache2-utils \
-    apache2-mod-proxy \
-    apache2-mod-proxy-http \
-    apache2-mod-rewrite \
-    apache2-mod-headers \
-    apache2-mod-ssl && \
-    # Habilitar los módulos
-    sed -i '/#LoadModule proxy_module/ s/^#//g' /etc/apache2/httpd.conf && \
-    sed -i '/#LoadModule proxy_http_module/ s/^#//g' /etc/apache2/httpd.conf && \
-    sed -i '/#LoadModule rewrite_module/ s/^#//g' /etc/apache2/httpd.conf && \
-    sed -i '/#LoadModule headers_module/ s/^#//g' /etc/apache2/httpd.conf && \
-    sed -i '/#LoadModule ssl_module/ s/^#//g' /etc/apache2/httpd.conf
+# Copiar el archivo de configuración personalizado
+COPY httpd.conf /usr/local/apache2/conf/httpd.conf
 
-COPY httpd.conf /etc/apache2/httpd.conf
-
+# Exponer el puerto 80
 EXPOSE 80
 
 # Iniciar Apache en primer plano (foreground)
