--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -1,7 +1,8 @@
-LoadModule proxy_module modules/mod_proxy.so
-LoadModule proxy_http_module modules/mod_proxy_http.so
-LoadModule mpm_event_module modules/mod_mpm_event.so
-LoadModule log_config_module modules/mod_log_config.so
+LoadModule proxy_module /usr/lib/apache2/modules/mod_proxy.so
+LoadModule proxy_http_module /usr/lib/apache2/modules/mod_proxy_http.so
+LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
+LoadModule headers_module /usr/lib/apache2/modules/mod_headers.so
+LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
@@ -13,8 +14,8 @@ ServerName localhost
     ServerName bego.work.gd
     
     # Proxy a la aplicación app1.war en Tomcat
-    ProxyPass / http://tomcat:8080/app1/
-    ProxyPassReverse / http://tomcat:8080/app1/
+    ProxyPass / http://tomcat:8080/app3/
+    ProxyPassReverse / http://tomcat:8080/app3/
     
     # Logs
     ErrorLog /usr/local/apache2/logs/bego_error.log
