--- a/primera prueba/apache.conf
+++ b/primera prueba/apache.conf
@@ -14,8 +14,8 @@ LoadModule alias_module modules/mod_alias.so
 <VirtualHost *:80>
     ServerName bego.work.gd
     ProxyPreserveHost On
-    ProxyPass / http://tomcat:8080/app2/
-    ProxyPassReverse / http://tomcat:8080/app2/
+    ProxyPass / http://tomcat:8080/sample/
+    ProxyPassReverse / http://tomcat:8080/sample/
 
     # Redirigir HTTP a HTTPS
     Redirect permanent / https://bego.work.gd/
