--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -1,8 +1,8 @@
-LoadModule proxy_module /usr/lib/apache2/modules/mod_proxy.so
-LoadModule proxy_http_module /usr/lib/apache2/modules/mod_proxy_http.so
-LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
-LoadModule headers_module /usr/lib/apache2/modules/mod_headers.so
-LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
+LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule ssl_module modules/mod_ssl.so
+LoadModule headers_module modules/mod_headers.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
