--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -3,6 +3,7 @@ LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule ssl_module modules/mod_ssl.so
 LoadModule headers_module modules/mod_headers.so
+LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
@@ -14,12 +15,11 @@ ServerName localhost
     ServerName bego.work.gd
     
     # Proxy a la aplicación app1.war en Tomcat
-    ProxyPass / http://tomcat:8080/app3/
-    ProxyPassReverse / http://tomcat:8080/app3/
+    ProxyPass / http://tomcat:8080/sample/
+    ProxyPassReverse / http://tomcat:8080/sample/
     
     # Logs
     ErrorLog /usr/local/apache2/logs/bego_error.log
-    CustomLog /usr/local/apache2/logs/bego_access.log common
 </VirtualHost>
 
 <VirtualHost *:80>
@@ -31,5 +31,4 @@ ServerName localhost
     
     # Logs
     ErrorLog /usr/local/apache2/logs/bego1_error.log
-    CustomLog /usr/local/apache2/logs/bego1_access.log common
 </VirtualHost>
