--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -1,9 +1,7 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
-LoadModule rewrite_module modules/mod_rewrite.so
-LoadModule ssl_module modules/mod_ssl.so
-LoadModule headers_module modules/mod_headers.so
-LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+#LoadModule ssl_module modules/mod_ssl.so
+LoadModule mpm_event_module modules/mod_mpm_event.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
@@ -18,8 +16,6 @@ ServerName localhost
     ProxyPass / http://tomcat:8080/sample/
     ProxyPassReverse / http://tomcat:8080/sample/
     
-    # Logs
-    ErrorLog /usr/local/apache2/logs/bego_error.log
 </VirtualHost>
 
 <VirtualHost *:80>
@@ -29,6 +25,4 @@ ServerName localhost
     ProxyPass / http://tomcat:8080/app2/
     ProxyPassReverse / http://tomcat:8080/app2/
     
-    # Logs
-    ErrorLog /usr/local/apache2/logs/bego1_error.log
 </VirtualHost>
