--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -1,28 +1,36 @@
+# Cargar módulos necesarios
+LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
-#LoadModule ssl_module modules/mod_ssl.so
-LoadModule mpm_event_module modules/mod_mpm_event.so
+
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
 Listen 80
-
 ServerName localhost
 
+# Habilitar logs
+ErrorLog /usr/local/apache2/logs/error.log
+LogLevel debug
+
+# VirtualHost para app1 (sample.war)
 <VirtualHost *:80>
     ServerName bego.work.gd
-    
-    # Proxy a la aplicación app1.war en Tomcat
+
+    ProxyPreserveHost On
     ProxyPass / http://tomcat:8080/sample/
     ProxyPassReverse / http://tomcat:8080/sample/
-    
+
+    ErrorLog /usr/local/apache2/logs/bego_error.log
 </VirtualHost>
 
+# VirtualHost para app2 (app2.war)
 <VirtualHost *:80>
     ServerName bego1.work.gd
-    
-    # Proxy a la aplicación app2.war en Tomcat
+
+    ProxyPreserveHost On
     ProxyPass / http://tomcat:8080/app2/
     ProxyPassReverse / http://tomcat:8080/app2/
-    
+
+    ErrorLog /usr/local/apache2/logs/bego1_error.log
 </VirtualHost>
