Modificacion grupo seguridad para pruebas

--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -2,7 +2,7 @@
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
-
+LoadModule unixd_module modules/mod_unixd.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
