Modificacion grupo seguridad para pruebas

--- a/archivos-conf-script/otra-conf.conf
+++ b/archivos-conf-script/otra-conf.conf
@@ -4,6 +4,7 @@ LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule headers_module modules/mod_headers.so
+LoadModule env_module modules/mod_env.so
 
 # Configuración mínima
 ServerRoot "/usr/local/apache2"
@@ -14,13 +15,36 @@ Group www-data
 # VirtualHost para bego.work.gd
 <VirtualHost *:80>
     ServerName bego.work.gd
-    ProxyPass / http://tomcat:8080/sample/
+    ServerName bego.work.gd
+    
+    ProxyPass / http://tomcat:8080/sample/ retry=0 timeout=300
     ProxyPassReverse / http://tomcat:8080/sample/
+    ProxyPassReverseCookiePath / /
+    
+    # Configuración de entorno (requiere mod_env)
+    SetEnv force-proxy-request-1.0 1
+    SetEnv proxy-nokeepalive 1
+    
+    # Cabeceras de seguridad
+    Header always set X-Content-Type-Options "nosniff"
+    RequestHeader set X-Forwarded-Proto "http"
+    RequestHeader set X-Forwarded-Port "80"
+    RequestHeader set Host "bego.work.gd"
 </VirtualHost>
 
 # VirtualHost para bego1.work.gd
 <VirtualHost *:80>
     ServerName bego1.work.gd
-    ProxyPass / http://tomcat:8080/app2/
+    
+    ProxyPass / http://tomcat:8080/app2/ retry=0 timeout=300
     ProxyPassReverse / http://tomcat:8080/app2/
+    ProxyPassReverseCookiePath / /
+    
+    SetEnv force-proxy-request-1.0 1
+    SetEnv proxy-nokeepalive 1
+
+    Header always set X-Content-Type-Options "nosniff"
+    RequestHeader set X-Forwarded-Proto "http"
+    RequestHeader set X-Forwarded-Port "80"
+    RequestHeader set Host "bego1.work.gd"
 </VirtualHost>
