--- a/archivos-conf-script/docker-compose.yml
+++ b/archivos-conf-script/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./httpd.conf:/usr/local/apache2/conf/httpd.conf  
+      - ./otra-conf.conf:/usr/local/apache2/conf/httpd.conf  
       - ./httpd-vhosts.conf:/usr/local/apache2/conf/extra/httpd-vhosts.conf
     networks:
       - app-network
