cambio de configuracion

--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -3,6 +3,7 @@ LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule unixd_module modules/mod_unixd.so
+LoadModule authz_core_module modules/mod_authz_core.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
@@ -22,6 +23,10 @@ LogLevel debug
     ProxyPassReverse / http://tomcat:8080/sample/
 
     ErrorLog /usr/local/apache2/logs/bego_error.log
+
+    <Directory />
+        Require all granted
+    </Directory>
 </VirtualHost>
 
 # VirtualHost para app2 (app2.war)
@@ -33,4 +38,8 @@ LogLevel debug
     ProxyPassReverse / http://tomcat:8080/app2/
 
     ErrorLog /usr/local/apache2/logs/bego1_error.log
+
+    <Directory />
+        Require all granted
+    </Directory>
 </VirtualHost>
