añadiendo una app nueva

--- a/archivos-conf-script/httpd.conf
+++ b/archivos-conf-script/httpd.conf
@@ -34,8 +34,8 @@ LogLevel debug
     ServerName bego1.work.gd
 
     ProxyPreserveHost On
-    ProxyPass / http://tomcat:8080/app2/
-    ProxyPassReverse / http://tomcat:8080/app2/
+    ProxyPass / http://tomcat:8080/appSusana1/
+    ProxyPassReverse / http://tomcat:8080/appSusana1/
 
     ErrorLog /usr/local/apache2/logs/bego1_error.log
 
