--- a/archivos-conf-script/docker-compose.yml
+++ b/archivos-conf-script/docker-compose.yml
@@ -7,8 +7,11 @@ services:
     container_name: apache
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./httpd.conf:/usr/local/apache2/conf/httpd.conf  
+      - ./httpd2.conf:/usr/local/apache2/conf/httpd.conf  
+      - ./cert-bego:/usr/local/apache2/certs/bego:ro 
+      - ./cert-bego1:/usr/local/apache2/certs/bego1:ro  
     networks:
       - app-network
     depends_on:
