--- a/archivos-conf-script/httpd2.conf
+++ b/archivos-conf-script/httpd2.conf
@@ -5,6 +5,7 @@ LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule unixd_module modules/mod_unixd.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule ssl_module modules/mod_ssl.so
+LoadModule alias_module modules/mod_alias.so
 
 # Configuración básica
 ServerRoot "/usr/local/apache2"
