--- a/archivos-conf-script/httpd2.conf
+++ b/archivos-conf-script/httpd2.conf
@@ -10,6 +10,7 @@ LoadModule alias_module modules/mod_alias.so
 # Configuración básica
 ServerRoot "/usr/local/apache2"
 Listen 80
+Listen 443
 ServerName localhost
 
 # Habilitar logs
@@ -19,10 +20,6 @@ LogLevel debug
 # VirtualHost para bego.work.gd app1 (sample.war)
 <VirtualHost *:80>
     ServerName bego.work.gd
-
-    ProxyPreserveHost On
-    ProxyPass / http://tomcat:8080/sample/
-    ProxyPassReverse / http://tomcat:8080/sample/
 
     ErrorLog /usr/local/apache2/logs/bego_error.log
 
@@ -52,10 +49,6 @@ LogLevel debug
 # VirtualHost para app2 (app2.war)
 <VirtualHost *:80>
     ServerName bego1.work.gd
-
-    ProxyPreserveHost On
-    ProxyPass / http://tomcat:8080/appSusana1/
-    ProxyPassReverse / http://tomcat:8080/appSusana1/
 
     ErrorLog /usr/local/apache2/logs/bego1_error.log
 
