--- a/archivos-conf-script/docker-compose.yml
+++ b/archivos-conf-script/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./httpd2.conf:/usr/local/apache2/conf/httpd.conf  
+      - ./httpd.conf:/usr/local/apache2/conf/httpd.conf  
       - ./cert-bego:/usr/local/apache2/certs/bego:ro 
       - ./cert-bego1:/usr/local/apache2/certs/bego1:ro  
     networks:
